--- a/ExpenseTrackingBot/ExpenseTrackingBot.csproj
+++ b/ExpenseTrackingBot/ExpenseTrackingBot.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Google.Apis.Sheets.v4" Version="1.41.1.1732" />
     <PackageReference Include="HttpToSocks5Proxy" Version="1.2.1" />
     <PackageReference Include="Telegram.Bot" Version="15.0.0" />
   </ItemGroup>
