--- a/BotDesignerLib/BotDesignerLib.csproj
+++ b/BotDesignerLib/BotDesignerLib.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="LiteDB" Version="4.1.4" />
     <PackageReference Include="Telegram.Bot" Version="15.0.0" />
   </ItemGroup>
 
