--- a/ExpenseTrackingBot/ExpenseTrackingBot.csproj
+++ b/ExpenseTrackingBot/ExpenseTrackingBot.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <PackageReference Include="Google.Apis.Sheets.v4" Version="1.41.1.1732" />
     <PackageReference Include="HttpToSocks5Proxy" Version="1.2.1" />
+    <PackageReference Include="LiteDB" Version="4.1.4" />
     <PackageReference Include="Telegram.Bot" Version="15.0.0" />
   </ItemGroup>
 
