--- a/ExpenseTrackingBot/ExpenseTrackingBot.csproj
+++ b/ExpenseTrackingBot/ExpenseTrackingBot.csproj
@@ -14,7 +14,13 @@
   <ItemGroup>
     <PackageReference Include="Google.Apis.Sheets.v4" Version="1.41.1.1732" />
     <PackageReference Include="HttpToSocks5Proxy" Version="1.2.1" />
-    <PackageReference Include="LiteDB" Version="4.1.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="3.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.0" />
     <PackageReference Include="Telegram.Bot" Version="15.0.0" />
   </ItemGroup>
 
